classDiagram
    class Burger {
        <<abstract>>
        +prepare() void
    }
    class GarlicBread {
        <<abstract>>
        +prepare() void
    }

    class BasicBurger
    class StandardBurger
    class PremiumBurger
    class BasicWheatBurger
    class StandardWheatBurger
    class PremiumWheatBurger
    Burger <|-- BasicBurger
    Burger <|-- StandardBurger
    Burger <|-- PremiumBurger
    Burger <|-- BasicWheatBurger
    Burger <|-- StandardWheatBurger
    Burger <|-- PremiumWheatBurger

    class BasicGarlicBread
    class CheeseGarlicBread
    class BasicWheatGarlicBread
    class CheeseWheatGarlicBread
    GarlicBread <|-- BasicGarlicBread
    GarlicBread <|-- CheeseGarlicBread
    GarlicBread <|-- BasicWheatGarlicBread
    GarlicBread <|-- CheeseWheatGarlicBread

    class MealFactory {
        <<abstract>>
        +createBurger(type: string) Burger*
        +createGarlicBread(type: string) GarlicBread*
    }

    class SinghBurger {
        +createBurger(type: string) Burger*
        +createGarlicBread(type: string) GarlicBread*
    }
    class KingBurger {
        +createBurger(type: string) Burger*
        +createGarlicBread(type: string) GarlicBread*
    }

    MealFactory <|-- SinghBurger
    MealFactory <|-- KingBurger
    MealFactory ..> Burger : creates
    MealFactory ..> GarlicBread : creates
